--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon/
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/icon/weather_icon.png"
+  adaptive_icon_background: "#2196F3"
+  adaptive_icon_foreground: "assets/icon/weather_icon.png"
