--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,7 @@
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx1024M -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=false
+org.gradle.configureondemand=false
 android.useAndroidX=true
 android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
